# template-matching

./: .env  .gitignore  README.md  pyproject.toml
assets/csv/: memo.txt
assets/images/input/: memo.txt
assets/images/output/: memo.txt
config/: named-ranges.json
src/: app.py  file_access.py  template_matching.py
